[package]
name = "relay-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Wire protocol types shared between concourse and inboard-relay"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v7"] }
